@@ -1,15 +1,16 @@
 Release 2.1.1 - ???
 
+   * Add detection of ESRI Layer files (TIKA-3570).
+
    * Add detection of JPEG XL, MARC, ICC profiles, NES-ROM file types
      (TIKA-3562 and TIKA-3563)
+
    * Remove duplicate "subject" metadata keys that were intended
      for backwards compatibility within 1.x only (TIKA-3564).
 
    * Fix Open Office mime types to be subclasses of application/zip
      and no longer require OPCPackageDetector-last ordering of zip
      detectors (TIKA-3556).
-
-   * Add detection of JPEG XL file types (TIKA-3562)
 
    * Improve robustness and features of the httpfetcher (TIKA-3543)
    
